<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_openMensajes"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="@string/openMensajes" />

        <!--<item
            android:id="@+id/nav_enviados"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/myenviados" />
        <item
        android:id="@+id/nav_location"
        android:icon="@drawable/ic_my_location_black_24dp"
        android:title="@string/myLocation" />-->

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit_to_app_black_24dp"
            android:title="@string/logout"/>
    </group>

</menu>
