<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greenBg"
    tools:context="org.mlmunozd.app.MessageDeliverySystem.Logic.Intro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
    <ImageView
        android:id="@+id/appLogo"
        android:layout_width="165dp"
        android:layout_height="152dp"
        android:src="@mipmap/applogo"
        android:layout_marginBottom="20dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/titleMainApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="20"
        android:enabled="false"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:theme="@style/fontTitleApp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/btnRegister"
            android:theme="@style/fontBtns"
            android:background="@drawable/border_button_intro"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/btnLogin"
            android:theme="@style/fontBtns"
            android:background="@drawable/border_button_intro" />

    </LinearLayout>
</RelativeLayout>
