<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idActivityLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greenBg"
    tools:context="org.mlmunozd.app.MessageDeliverySystem.Logic.Register">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/registerTitleText"
            android:layout_width="280dp"
            android:layout_height="35dp"
            android:text="@string/registerTitle"
            android:layout_marginBottom="20dp"
            android:theme="@style/fontTitle" />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/introEmail"
            android:layout_marginBottom="20dp"
            android:inputType="textEmailAddress"
            android:theme="@style/fontTextNormal" />

        <EditText
            android:id="@+id/passText"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/introPass"
            android:inputType="textPassword"
            android:theme="@style/fontTextNormal"
            android:layout_marginBottom="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="right"
            android:layout_weight="1">


            <ImageButton
                android:id="@+id/btnregister"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:theme="@style/gomainBtn" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
