<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/idActivityLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greenBg"
    tools:context="org.mlmunozd.app.MessageDeliverySystem.Logic.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:text="@string/loginTitle"
            android:theme="@style/fontTitle"
            android:layout_marginBottom="20dp"
            android:elevation="2dp" />

        <EditText
            android:id="@+id/emailText"
            android:layout_width="401dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/introEmail"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="20dp"
            android:theme="@style/fontTextNormal"/>

        <EditText
            android:id="@+id/passText"
            android:layout_width="399dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/introPass"
            android:inputType="textPassword"
            android:theme="@style/fontTextNormal" />

    <TextView
        android:id="@+id/forgotText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textAlignment="viewStart"
        android:theme="@style/fontTextMini" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:gravity="right"
            android:layout_weight="1">

            <ImageButton
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:theme="@style/gomainBtn" />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>
